<resources>
    <string name="app_name">Notiqo</string>
    <string name="timeString_text">You will get quotes after every 1 hour</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="string1_text">You will Get Quotes After every </string>
    <string name="string2_text"> hour(s).</string>
    <string name="source_text">Make sure the app is on in AutoStart or AutoLaunch or Startup</string>
    <string name="share_text">Share</string>
    <string name="rate_text">Rate</string>
    <string name="quote_text">Quotes Collection</string>
    <string name="update_text">Update</string>
    <string name="surprise_text">Surprise</string>
</resources>
